--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Asistente LOL</title>
+  <link rel="stylesheet" href="/style.css" />
 </head>
 
 <body>
   <div id="app">
     <div class="container mx-auto px-4 text-center">
-      <h1 class="text-lg font-bold">Pregunta lo que quieras y veré lo que puedo hacer...</h1>
-      <form class="my-4">
+      <h1>Asistente troll</h1>
+      <h2 class="text-lg font-bold">Pregunta lo que quieras y veré lo que puedo hacer...</h2>
+      <form id="input-form" class="my-4">
         <input name="prompt" class="p-2 text-center border border-black rounded w-72" placeholder="¿Qué quieres?" />
       </form>
       <p id="output" class="text-center text-lg max-w-sm mx-auto"></p>
+    </div>
+    <div class="fixed bottom-4 right-4">
+      <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+        data-id="salteadorneo" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF"
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
     </div>
   </div>
   <script type="module" src="/main.js"></script>
