--- a/index.html
+++ b/index.html
@@ -9,15 +9,50 @@
   <link rel="stylesheet" href="/style.css" />
 </head>
 
-<body>
+<body class="dark:bg-gray-700">
   <div id="app">
-    <div class="container mx-auto px-4 text-center">
-      <h1>Asistente troll</h1>
-      <h2 class="text-lg font-bold">Pregunta lo que quieras y veré lo que puedo hacer...</h2>
-      <form id="input-form" class="my-4">
-        <input name="prompt" class="p-2 text-center border border-black rounded w-72" placeholder="¿Qué quieres?" />
-      </form>
-      <p id="output" class="text-center text-lg max-w-sm mx-auto"></p>
+    <div class="relative px-6 lg:px-8">
+      <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+        <!-- <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+          <div
+            class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+            El asistente virtual que no necesitas <a href="#" class="font-semibold text-indigo-600"><span
+                class="absolute inset-0" aria-hidden="true"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+          </div>
+        </div> -->
+        <div class="text-center">
+          <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">
+            El <span class="text-transparent bg-clip-text bg-gradient-to-br from-pink-400 to-red-600">asistente
+              virtual</span> que no necesitas
+          </h1>
+          <p class="mt-6 text-lg leading-8 text-gray-600">
+            ¿Quieres saber algo? ¿Una duda existencial? Intenta preguntar...
+          </p>
+          <form id="input-form" class="my-4">
+            <label for="search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+            <div class="relative">
+              <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none"
+                  stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                </svg>
+              </div>
+              <input name="prompt" type="search" id="prompt"
+                class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="" required>
+              <button type="submit"
+                class="text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
+            </div>
+          </form>
+          <p id="output" class="text-center text-lg max-w-sm mx-auto"></p>
+
+          <div class="mt-10 flex items-center justify-center gap-x-6">
+            <a href="#" class="text-sm font-semibold leading-6 text-gray-900">Learn more <span
+                aria-hidden="true">→</span></a>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="fixed bottom-4 right-4">
       <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
