--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       </div>
     </div>
     <script type="module" src="/main.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
