--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Asistente virtual</title>
+
+  <!-- Primary Meta Tags -->
+  <title>Asistente virtual</title>
+  <meta name="title" content="Asistente virtual">
+  <meta name="description" content="Un asistente virtual que no necesitas. Puede que no te responda, pero inténtalo.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://asistente.lol/">
+  <meta property="og:title" content="Asistente virtual">
+  <meta property="og:description"
+    content="Un asistente virtual que no necesitas. Puede que no te responda, pero inténtalo.">
+  <meta property="og:image" content="">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://asistente.lol/">
+  <meta property="twitter:title" content="Asistente virtual">
+  <meta property="twitter:description"
+    content="Un asistente virtual que no necesitas. Puede que no te responda, pero inténtalo.">
+  <meta property="twitter:image" content="">
+
   <link rel="stylesheet" href="/style.css" />
 </head>
 
